examples_c_args = ['-DG_LOG_DOMAIN="Cog-Example"']

executable('viewport',
    'viewport.c',
    c_args: examples_c_args,
    dependencies: cogcore_dep,
    install: false,
)

executable('viewports',
    'viewports.c',
    c_args: examples_c_args,
    dependencies: cogcore_dep,
    install: false,
)
